# rust-schema-registry-server

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2020-10-13-154342_create_schema_table/: up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
src/model/: dto.rs
src/validator/: avro_validator.rs  mod.rs
