[package]
name = "rust_schema_registry_server"
version = "0.1.0"
authors = ["Dušan Andrić <Dusan.Andric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
avro-rs = "0.11.0"
sha2 = "0.9"
